# polyhedron-faces

./: Cargo.toml  README.md
src/: lib.rs  polyhedron.rs
src/polyhedron/: capsule.rs  cone.rs  cube.rs  cylinder.rs  octa.rs  pin.rs  pipe.rs  revolution.rs  sphere.rs  tetra.rs  torus.rs
